--- a/inmuebles_cdxm.ipynb
+++ b/inmuebles_cdxm.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMQ5um9AfqxzqLEG+n//Bjo",
+      "authorship_tag": "ABX9TyNYGYKRfhpDmVc3abnkvFrV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -9300,7 +9300,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Tratamiento Datos Nulos"
+        "## **Tratamiento Datos Nulos**"
       ],
       "metadata": {
         "id": "x_W6hOmfGxT5"
@@ -9952,13 +9952,13 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "## **Remover Registros Inconsistentes**"
+      ],
       "metadata": {
-        "id": "a3Qb0NKfJFOn"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "_leg3APPJd_g"
+      }
     }
   ]
 }
