--- a/inmuebles_cdxm.ipynb
+++ b/inmuebles_cdxm.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNxsaG8gr7dwpZq3zIg1pcj",
+      "authorship_tag": "ABX9TyPWxQ+ja+qQTG/xioxtmZwq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -11850,7 +11850,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# aquí elimino la columna tipo\n",
+        "# aquí elimino la columna tipo / axis 1 me refiero a columna\n",
         "df_depto.drop('Tipo', axis=1, inplace=True)\n",
         "df_depto.sample(10)"
       ],
