--- a/Pandas_I_O.ipynb
+++ b/Pandas_I_O.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP+NKLdeUxH7BN/K28juxIz",
+      "authorship_tag": "ABX9TyOeMIIxL1rdusCZXZk+m9iz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2358,7 +2358,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###**Para exportar un DF a CSV, escribir un CSV**"
+        "###**Para exportar un DF a CSV, escribir un CSV**\n",
+        "Documentación: https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.to_csv.html#pandas.DataFrame.to_csv"
       ],
       "metadata": {
         "id": "kkEaxhfpy3z2"
