--- a/archivos_JSON.ipynb
+++ b/archivos_JSON.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMDbh70/+r1ynR5siTDMcbK",
+      "authorship_tag": "ABX9TyPxGTSrFA+HXkgS5co6LjzR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4547,6 +4547,41 @@
           "execution_count": 29
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###**obteniendo archivos JSON de APIs**"
+      ],
+      "metadata": {
+        "id": "9xwumg9Zy3or"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Para obtener datos en formato JSON podemos utilizar una API (Application Programming Interface). Es una interfaz de programación de aplicaciones que permite la comunicación entre diferentes programas o sistemas.\n",
+        "\n",
+        "Hay varios formatos que se pueden utilizar en las API y uno de los más comunes es JSON (JavaScript Object Notation). JSON es un formato ligero para intercambiar información entre sistemas que utiliza la notación basada en objetos de JavaScript.\n",
+        "\n",
+        "Tenemos la siguiente situación-problema:"
+      ],
+      "metadata": {
+        "id": "1hv8Wb0Ny8My"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "“Una empresa de alimentos saludables tiene problemas con la popularidad de sus productos. A pesar de ofrecer opciones saludables, muchos clientes se muestran reacios a comprar los productos debido a la falta de información sobre los valores nutricionales de las frutas que se utilizan en la producción de alimentos”.\n",
+        "\n",
+        "Ante esta situación podemos acceder a una API llamada Fruitvice para recopilar información detallada sobre los valores nutricionales de las frutas que se utilizan en los productos. Con esta información, la empresa podrá actualizar sus empaques y materiales de marketing para resaltar los valores nutricionales de las frutas y así atraer más clientes que buscan opciones saludables. Además, la empresa puede utilizar la información para desarrollar nuevos productos que satisfagan aún más las necesidades nutricionales de su clientela.\n",
+        "\n",
+        "Una forma común de acceder a las API es a través de la biblioteca requests. Para eso, también es necesario importar el módulo json:"
+      ],
+      "metadata": {
+        "id": "8EnwyXvEzIz4"
+      }
     }
   ]
 }
