--- a/archivos_HTML_y_XML.ipynb
+++ b/archivos_HTML_y_XML.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNqsgrVaCZDE4jn6/lbWF2k",
+      "authorship_tag": "ABX9TyMF7vmcKNJM7VQoGzFB1143",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,6 +33,27 @@
       ],
       "metadata": {
         "id": "gnq4ERI-mocV"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "HTML (Hypertext Markup Language - Lenguaje de marcación de hipertexto) es el código que utilizamos para estructurar una página web y su contenido. HTML consta de una serie de elementos que se utilizan para delimitar o agrupar diferentes contenidos para que aparezca o actúe de una determinada manera.\n",
+        "\n",
+        "Un documento HTML comienza con la etiqueta html y termina con la etiqueta </html>. También contiene un encabezado (<head) que describe el título de la página y otras informaciones relevantes; y un cuerpo (<body) que contiene el contenido de la página. El encabezado y el cuerpo están delimitados por las etiquetas <head y </head, y <body y </body, respectivamente.\n",
+        "\n",
+        "Dentro del cuerpo podemos utilizar diversos elementos para crear la estructura del contenido. Observe cada detalle en el siguiente ejemplo:\n",
+        "\n",
+        "- tags <h1 a <h6: crear títulos y subtítulos.\n",
+        "- tags <p: crear párrafos.\n",
+        "- tags <ul y <li: crear listas no ordenadas.\n",
+        "- tags <img: insertar imágenes.\n",
+        "- tags <table, <tr, <th y <td: crear tablas.\n",
+        "\n",
+        "Además, podemos usar atributos en elementos HTML para especificar propiedades adicionales. Por ejemplo: podemos usar el atributo src en la etiqueta <img para indicar la dirección de la imagen que queremos mostrar, o el atributo href en la etiqueta <a> para indicar la dirección del link que queremos crear."
+      ],
+      "metadata": {
+        "id": "P72GzEhdoj45"
       }
     },
     {
