--- a/SQL.ipynb
+++ b/SQL.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMmeaDmKj+zYuWYVCtZFph7",
+      "authorship_tag": "ABX9TyMHVdLnqbBPdUNK7Lnd3k1L",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -673,13 +673,6 @@
       ],
       "metadata": {
         "id": "pUJ82twp5uV7"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "EByaiO0B6SQj"
       }
     },
     {
@@ -3679,6 +3672,30 @@
           },
           "metadata": {},
           "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "inspector = inspect(resultado_engine)\n",
+        "print(inspector.get_table_names())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7lpamc6kG_Bn",
+        "outputId": "214e7ad7-53e9-4480-aff9-0f1d09068e6d"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['clientes', 'empleados']\n"
+          ]
         }
       ]
     }
